--- a/da-api/src/main/resources/application.properties
+++ b/da-api/src/main/resources/application.properties
@@ -39,7 +39,7 @@ keycloak.cors = true
 spring.h2.console.enabled=true
 
 # Turn off automatic schema creation to avoid conflicts when using schema.sql to create tables
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 # Logging JPA Queries to console
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
@@ -47,9 +47,9 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
  #MySQL connection string properties
-spring.datasource.url=jdbc:mysql://localhost:3306/testapp?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false#spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/DA_L1?createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false#spring.datasource.username=root
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
